Archive2/ab/e3205fad7ab53f/output
main.cpp: In function 'int main()':
main.cpp:11:12: warning: unused variable 't' [-Wunused-variable]
     double t = type_assert<double>(std::sin(2.2f));
            ^
main.cpp: In instantiation of 'const U& type_assert(const U&) [with T = double; U = float]':
main.cpp:11:50:   required from here
main.cpp:6:5: error: static assertion failed: ...
     static_assert(std::is_same<T, U>::value, "...");
     ^
